--- a/style.css
+++ b/style.css
@@ -1465,6 +1465,17 @@ body.has-header-image .site-header:after {
     background-position: center;
     background-size: cover;
 }
+.site-header-background-image img {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translateX(-50%) translateY(-50%);
+	width: 100%;
+	height: 100%;
+	z-index: -1;
+	-o-object-fit: cover;
+       object-fit: cover;
+}
 @media (min-width: 82.0625em) {
 	body #masthead > .col-full {
 		grid-column-gap: 40px;
@@ -4494,23 +4505,23 @@ video {
 # Footer
 --------------------------------------------------------------*/
 .site-footer {
-	padding-top: 5.5em;
-	padding-bottom: 3.706325903em;
-	z-index: -2;
     position: relative;
 }
-@media (min-width: 37.5625em) {
-	.footer-widgets.row-2 {
-		border-top: 1px solid;
-		padding-top: 80px;
+.site-footer > .col-full {
+	display: flex;
+	flex-wrap: wrap;
+}
+.site-footer > .col-full > * {
+	width: 100%;
+}
+@media (max-width: 37.5em) {
+	.footer-widgets {
+		margin-bottom: 25px;
 	}
 }
 /*--------------------------------------------------------------
 ## Copyright
 --------------------------------------------------------------*/
-.site-info{
-	padding-bottom: 1.117924em;
-}
 .site-info .site-wp-credits {
 	display: block;
 }
