Add colors to widgets and blocks.
Add arrow to select.
Add color to quote block, pullquote block, 404 error page widget title, date picker, form elements, menu widget, pages widget, categories block and calendar.

--- a/style.css
+++ b/style.css
@@ -5032,7 +5032,7 @@ input[type='week'],
 input[type='time'], 
 input[type='datetime'], 
 input[type='datetime-local'], 
-input[type='color'],
+input[type="color"],
 textarea {
 	background-color: #FFFFFF;
 	color: #898EA2;
